--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Ed."
 ---
 <div class="introduction">
-  <h1>hi.</h1>
+  <h1>welcome.</h1>
 
 <p>
   Ed is a <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> theme designed for textual
@@ -13,8 +13,16 @@ title: "Ed."
   to last. To start using Ed, please see <a href="{{ site.baseurl }}/documentation/">our
   documentation</a> for installation instructions and more. To learn more about the ideas behind Ed
   and a list of current features see our <a href="{{ site.baseurl }}/about/">about</a> section. To
-  see Ed in action, we've provided some sample minimal editions for you below.
+  see Ed in action, we've provided some sample minimal editions for you below. Special thanks to all the folks who made Ed. happen.
 </p>
+<p>
+  This particular website is a shell for a forthcoming class at the New College of Florida focused on digital history methods. The objective of the class will be to introduce history students to technology and digital methods through a group annotation and publication project.
+</p>
+<p>
+  Please check out the about page for project timeline, objectives, and other information.
+</p>
+<h1>Proposed Outline</h1>
+<img src="roadmap.png">
 </div>
 
 <hr>
